overflow fixed

--- a/resources/sass/create_project.scss
+++ b/resources/sass/create_project.scss
@@ -4,6 +4,7 @@
     height: 40vh;
     border: none;
     background-color: $retrace-light-blue;
+    overflow: hidden;
 }
 
 #buttonSelect::-moz-focus-inner {
